--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "dependencies": {
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
+    "material-ui": "^0.20.2",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
   },
   "scripts": {
     "client": "react-scripts start",
-    "server": "nodemon server.js",
+    "server": "nodemon server/index.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
