--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.5.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
+    "sinon": "^6.3.4",
     "validator": "^10.7.1"
   },
   "scripts": {
