--- a/package.json
+++ b/package.json
@@ -27,7 +27,13 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "babel-preset-airbnb": "^2.6.0",
     "chai": "^4.1.2",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.0",
     "mocha": "^5.2.0",
     "proxyquire": "^2.1.0",
     "supertest": "^3.3.0"
