add npm script with seed steps listed in README

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "server": "nodemon server/index.js",
     "build": "react-scripts build",
     "test": "cd server/; NODE_ENV=test mocha --exit",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "seed": "createdb react_twitter_dev && createdb react_twitter_test && cd server &&knex migrate:latest && knex migrate:latest --env test && knex seed:run && knex seed:run --env test"
   },
   "devDependencies": {
     "babel-preset-airbnb": "^2.6.0",
