--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build": "react-scripts build",
     "test": "cd server/; NODE_ENV=test mocha --exit",
     "eject": "react-scripts eject",
-    "seed": "createdb react_twitter_dev && createdb react_twitter_test && cd server &&knex migrate:latest && knex migrate:latest --env test && knex seed:run && knex seed:run --env test"
+    "seed": "dropdb react_twitter_dev && dropdb react_twitter_test && createdb react_twitter_dev && createdb react_twitter_test && cd server &&knex migrate:latest && knex migrate:latest --env test && knex seed:run && knex seed:run --env test"
   },
   "devDependencies": {
     "babel-preset-airbnb": "^2.6.0",
