--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "seed": "dropdb react_twitter_dev && dropdb react_twitter_test && createdb react_twitter_dev && createdb react_twitter_test && cd server &&knex migrate:latest && knex migrate:latest --env test && knex seed:run && knex seed:run --env test"
   },
   "devDependencies": {
+    "nodemon": "^1.18.4",
     "babel-preset-airbnb": "^2.6.0",
     "chai": "^4.1.2",
     "eslint": "^5.3.0",
