--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "knex": "^0.15.2",
     "lodash": "^4.17.11",
     "material-ui": "^0.20.2",
+    "nodemon": "^1.18.4",
     "pg": "^7.4.3",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
