--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "build": "react-scripts build",
     "test": "cd server/; NODE_ENV=test mocha --exit",
     "eject": "react-scripts eject",
-    "seed": "dropdb react_twitter_dev && dropdb react_twitter_test && createdb react_twitter_dev && createdb react_twitter_test && cd server && knex migrate:latest && knex migrate:latest --env test && knex seed:run && knex seed:run --env test"
+    "drop": "dropdb react_twitter_dev && dropdb react_twitter_test",
+    "seed": "createdb react_twitter_dev && createdb react_twitter_test && cd server && knex migrate:latest && knex migrate:latest --env test && knex seed:run && knex seed:run --env test"
   },
   "devDependencies": {
     "nodemon": "^1.18.4",
